# echo-charlie

./: .gitignore  README.md  __init__.py  audio.db  main.py  pyproject.toml
EchoCharlie/: __init__.py  echo_charlie.py  echo_db.py  echo_embed.py  echo_frame.py  echo_higgs.py  echo_qwen.py  echo_vsr.py  streamlit.py
chroma_db/: chroma.sqlite3
data/embeddings/: biden1.pkl  biden2.pkl  biden3.pkl  biden4_sunglasses.pkl  biden5.pkl  macron1.pkl  macron2.pkl  macron3.pkl  macron4.pkl  macron5.pkl  obama2.pkl  obama3.pkl  obama_2.pkl  trudeau_1.pkl  trump1.pkl  trump2.pkl  trump3.pkl  trump4.pkl  trump5_video.pkl  trump6_video.pkl
data/embeddings/video_frames/: macron_1.pkl  macron_2.pkl  obama_1.pkl  trudeau_2.pkl  trump_1.pkl  trump_2.pkl
data/faces/: ds_model_facenet_detector_opencv_aligned_normalization_base_expand_0.pkl
data/transcripts/: transcript.json
docs/: index.html
echo_db/: chroma.sqlite3
nbs/tests/: autoavsr.ipynb  autoavsr_test.ipynb  chromadb_test.ipynb  echo_db_test.ipynb  import_test.ipynb  transcript_to_cleanup_test.ipynb
nbs/tests/chroma_db/: chroma.sqlite3
